demo/projects/esp32/az-esp-freertos/examples/tls_basic/log_esp3.txt
[1/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_precondition.c.obj
[2/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/iot/CMakeFiles/az_iot_hub.dir/az_iot_hub_client.c.obj
[3/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/iot/CMakeFiles/az_iot_hub.dir/az_iot_hub_client_methods.c.obj
[4/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc  -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wcast-qual -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/src/azure/core/az_http_request.c
In file included from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/src/azure/core/az_http_request.c:16:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
cc1: all warnings being treated as errors
[5/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/ports/coreMQTT/azure_iot_core_mqtt.c
In file included from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/ports/coreMQTT/azure_iot_core_mqtt.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
cc1: all warnings being treated as errors
[6/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_span.c.obj
[7/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include/esp_err.h:18,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include/esp_timer.h:44,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:84,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortEnterCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:230:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortExitCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:241:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/cpu.h:27,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/spinlock.h:19,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:85,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h: In function 'xPortGetCoreID':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/hal/cpu_hal.h:35:41: error: conversion to 'uint32_t' {aka 'unsigned int'} from 'int' may change the sign of the result [-Werror=sign-conversion]
 #define cpu_hal_get_core_id()           cpu_ll_get_core_id()
                                         ^~~~~~~~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:205:12: note: in expansion of macro 'cpu_hal_get_core_id'
     return cpu_hal_get_core_id();
            ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
[8/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/iot/CMakeFiles/az_iot_hub.dir/az_iot_hub_client_sas.c.obj
[9/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/iot/CMakeFiles/az_iot_hub.dir/az_iot_hub_client_telemetry.c.obj
[10/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/iot/CMakeFiles/az_iot_hub.dir/az_iot_hub_client_c2d.c.obj
[11/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include/esp_err.h:18,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include/esp_timer.h:44,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:84,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortEnterCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:230:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortExitCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:241:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/cpu.h:27,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/spinlock.h:19,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:85,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h: In function 'xPortGetCoreID':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/hal/cpu_hal.h:35:41: error: conversion to 'uint32_t' {aka 'unsigned int'} from 'int' may change the sign of the result [-Werror=sign-conversion]
 #define cpu_hal_get_core_id()           cpu_ll_get_core_id()
                                         ^~~~~~~~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:205:12: note: in expansion of macro 'cpu_hal_get_core_id'
     return cpu_hal_get_core_id();
            ^~~~~~~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/task.h:80,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:14:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h: At top level:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:194:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticListItem_t) == sizeof(ListItem_t), "StaticListItem_t != ListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:207:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticMiniListItem_t) == sizeof(MiniListItem_t), "StaticMiniListItem_t != MiniListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:224:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticList_t) == sizeof(List_t), "StaticList_t != List_t");
 ^~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:101,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c: In function 'prvProvClientUpdateState':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:128:13: note: in expansion of macro 'configASSERT'
             configASSERT( false );
             ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c: In function 'prvProvClientTriggerAction':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:490:13: note: in expansion of macro 'configASSERT'
             configASSERT( false );
             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
[12/32] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include/esp_err.h:18,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include/esp_timer.h:44,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:84,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortEnterCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:230:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortExitCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:241:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/cpu.h:27,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/spinlock.h:19,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:85,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h: In function 'xPortGetCoreID':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/hal/cpu_hal.h:35:41: error: conversion to 'uint32_t' {aka 'unsigned int'} from 'int' may change the sign of the result [-Werror=sign-conversion]
 #define cpu_hal_get_core_id()           cpu_ll_get_core_id()
                                         ^~~~~~~~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:205:12: note: in expansion of macro 'cpu_hal_get_core_id'
     return cpu_hal_get_core_id();
            ^~~~~~~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/task.h:80,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h: At top level:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:194:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticListItem_t) == sizeof(ListItem_t), "StaticListItem_t != ListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:207:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticMiniListItem_t) == sizeof(MiniListItem_t), "StaticMiniListItem_t != MiniListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:224:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticList_t) == sizeof(List_t), "StaticList_t != List_t");
 ^~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:101,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvMQTTProcessIncomingPublish':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:67:5: note: in expansion of macro 'configASSERT'
     configASSERT( pxPublishInfo != NULL );
     ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvMQTTProcessSuback':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:105:5: note: in expansion of macro 'configASSERT'
     configASSERT( pxIncomingPacket != NULL );
     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:106:5: note: in expansion of macro 'configASSERT'
     configASSERT( ( azureiotmqttGET_PACKET_TYPE( pxIncomingPacket->ucType ) ) == azureiotmqttPACKET_TYPE_SUBACK );
     ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvAzureIoTHubClientC2DProcess':
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:203:12: error: 'xResult' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     return xResult;
            ^~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvAzureIoTHubClientDirectMethodProcess':
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:256:12: error: 'xResult' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     return xResult;
            ^~~~~~~
cc1: all warnings being treated as errors
[13/32] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/utilities/BasicTLSMQTTExample.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/utilities/BasicTLSMQTTExample.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DHAVE_CONFIG_H -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -DWITH_POSIX -Iconfig -I../main -I../main/utilities -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/mbedtls/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/mbedtls/mbedtls/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/mbedtls/esp_crt_bundle/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/bootloader_support/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_update/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/spi_flash/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/wpa_supplicant/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/wpa_supplicant/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/wpa_supplicant/include/esp_supplicant -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/nvs_flash/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/pthread/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/perfmon/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/asio/asio/asio/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/asio/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/cbor/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/coap/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/coap/port/include/coap -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/coap/libcoap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/coap/libcoap/include/coap2 -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/console -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/nghttp/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/nghttp/nghttp2/lib/includes -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp-tls -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_adc_cal/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_gdbstub/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_hid/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcp_transport/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_http_client/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_http_server/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_https_ota/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/protobuf-c/protobuf-c -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/protocomm/include/common -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/protocomm/include/security -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/protocomm/include/transports -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/mdns/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_local_ctrl/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/sdmmc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_serial_slave_link/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_websocket_client/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/expat/expat/expat/lib -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/expat/port/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/wear_levelling/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/fatfs/diskio -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/fatfs/vfs -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/fatfs/src -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freemodbus/common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/idf_test/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/idf_test/include/esp32 -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/jsmn/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/json/cJSON -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/libsodium/libsodium/src/libsodium/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/libsodium/port_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/mqtt/esp-mqtt/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/openssl/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/spiffs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/ulp/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/unity/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/unity/unity/src -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/wifi_provisioning/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/examples/common_components/protocol_examples_common/include -I/mnt/c/Tara/Code/az-esp-freertos/port/exponential_backoff -I/mnt/c/Tara/Code/az-esp-freertos/port/logging -I/mnt/c/Tara/Code/az-esp-freertos/port/platform -I/mnt/c/Tara/Code/az-esp-freertos/port/network_transport -I/mnt/c/Tara/Code/az-esp-freertos/port/config -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/include -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/interface -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/utilities/BasicTLSMQTTExample.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/utilities/BasicTLSMQTTExample.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/utilities/BasicTLSMQTTExample.c.obj -c ../main/utilities/BasicTLSMQTTExample.c
In file included from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from ../main/utilities/BasicTLSMQTTExample.c:57:
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/include/azure_iot.h:31:10: fatal error: FreeRTOS.h: No such file or directory
 #include "FreeRTOS.h"
          ^~~~~~~~~~~~
compilation terminated.
ninja: build stopped: subcommand failed.
Adding "size-components"'s dependency "app" to list of commands with default set of options.
Executing action: app
Running ninja in directory /mnt/c/Tara/Code/az-esp-freertos/examples/tls_basic/build
Executing "ninja app"...
ninja failed with exit code 1
